style: prevent stretch rendering of grid items

--- a/app/globals.css
+++ b/app/globals.css
@@ -113,7 +113,7 @@ input, button, select {
 }
 
 .profile-section-grid {
-  @apply grid gap-6;
+  @apply grid gap-6 items-start;
   grid-template-columns: 2fr 6fr;
 }
 
